@@ -1,0 +1,2 @@
+local util = require("util")
+data.raw["utility-constants"]["default"].default_other_force_color = util.copy(data.raw["utility-constants"]["default"].default_enemy_force_color)
