@@ -1,10 +1,12 @@
 [mod-setting-name]
-ruins-min-distance-from-spawn=Minimum distance from spawn:
-ruins-large-ruin-chance=Chance for a large ruin per chunk:
-ruins-medium-ruin-chance=Chance for a medium ruin per chunk:
-ruins-small-ruin-chance=Chance for a small ruin per chunk:
+AbandonedRuins-enemy-not-cease-fire=Hostile ruin defenses [img=info]
+ruins-min-distance-from-spawn=Minimum distance from spawn [img=info]
+ruins-large-ruin-chance=Chance for a large ruin per chunk [img=info]
+ruins-medium-ruin-chance=Chance for a medium ruin per chunk [img=info]
+ruins-small-ruin-chance=Chance for a small ruin per chunk [img=info]
 
 [mod-setting-description]
+AbandonedRuins-enemy-not-cease-fire=If turned off, turrets and other defenses in ruins won't attack the player.
 ruins-min-distance-from-spawn=Minimum distance in tiles from spawn.
 ruins-large-ruin-chance=Chance to spawn a large ruin in a generated chunk, 0-1 float value, eg 0.1 is 10% chance.
 ruins-medium-ruin-chance=Chance to spawn a medium ruin in a generated chunk, 0-1 float value, eg 0.1 is 10% chance.
