@@ -1,8 +1,8 @@
 [mod-setting-name]
-ruins-min-distance-from-spawn=Minimalny dystans do ruin:
-ruins-large-ruin-chance=Szansa na pojawienie się wielkiej ruiny:
-ruins-medium-ruin-chance=Szansa na pojawienie się średniej ruiny:
-ruins-small-ruin-chance=Szansa na pojawienie się małej ruiny:
+ruins-min-distance-from-spawn=Minimalny dystans do ruin [img=info]
+ruins-large-ruin-chance=Szansa na pojawienie się wielkiej ruiny [img=info]
+ruins-medium-ruin-chance=Szansa na pojawienie się średniej ruiny [img=info]
+ruins-small-ruin-chance=Szansa na pojawienie się małej ruiny [img=info]
 
 [mod-setting-description]
 ruins-min-distance-from-spawn=Ilość kratek do najbliższej ruiny
